myteo/test/parser/ast/imports/empty_complex_error.exp
Error: Unexpected token `}`, expected identifier
test/parser/ast/imports/empty_complex_error.myte:3:10
 3 | import A.{}
   |           ^